updated seeder class